--- a/Mecánica Cuántica/ResumenArtículos/informe.tex
+++ b/Mecánica Cuántica/ResumenArtículos/informe.tex
@@ -33,29 +33,28 @@
 \section{Erasure tolerant quantum memory and the quantum null energy condition in holographic systems (\textit{arXiv: 2202.00022v1})}
 \justify
 %\noindent
-\lipsum[1]
-
+En este artículo, los autores estudian una forma explícita de codificación de un qubit lógico en dos excitaciones de propagación similares de entropía finita de von-Neumann en un fondo de temperatura finita cuyo borrado puede implementarse por medio de un flujo de entrada inhomogeneo e instantaneo de energía-momentum, debido al cual el sistema transita a un estado térmico. Para esto, los autores utilizan la condición de energía cuántica nula, QNEC, por sus siglas en inglés. Los autores muestran que esta condición lleva a resultados para la temperatura finita mínima para llevar a cabo el borrado, la cual es mayor que la dada en el principio de Landauer. Los autores explican que la termodinámica cuántica puede ser utilizada para el diseño de sistemas ideales para el ordenamiento de memoria cuántica. También explican que para un gran número de qubits, el umbral de temperatura de borrado aumenta monótamente con el número de qubits. Los autores dicen que puede ser conveniente investigar los procesos lentos de borrados, en los cuales la energía y el momentum es bombeada de forma lenta; también, expresan su interes en estudiar implementaciones de puertas cuánticas por medio de transformaciones unitarias conformes en los qubits codificados y estudiar sus propiedades tolerancia a fallos.
 \section{Algebraic Bethe Circuits (\textit{arXiv: 2202.04673v1})}
 \justify
-\lipsum[1]
+En este artículo, los autores toman el "Algebraic Bethe Ansatz" (Que según sutraducción del alemán es: Enfoque algebraico de Bethe, pero se refieren a él como ABA.) y lo llevan a una forma unitaria para su implementación directa en una computadora cuántica. Esto lo logran tomando las matrices que componen el ABA y por medio de la descomposición QR las transforman a matrices unitarias. Los autores muestran que por medio de dicha aproximación se pueden preparar eficientemente los eigenestados del modelo XX en una computadora cuántica, también corrieron simulaciones numéricas para prepara los valores propios del modelo XXZ para sistemas de 24 qubits y 12 "magnons". Su objetivo principal es "(...) construir circuitos cuánticos basados en ABA para la preparación directa de estados propios de modelos de vértices integrales en hardware cuántico" (a esto le llaman los "Algebraic Bethe Circuits"). Dicho objetivo se cumple, además la complejidad del circuito escala linealmente con el número de qubits. Los autores están interesados en explorar si los ABC pueden ser utilizados como "Ansatz" variacionales con los cuales resolver las ecuaciones de Bethe en circuitos cuánticos.
 
 \section{Self$-$Adjointness of Toeplitz Operators on the Segal$-$Bargmann Space (\textit{arXiv: 2202.04687v1})}
 \justify
-\lipsum[1]
+En este artículo se expone una demostración para un criterio que asegure la hermiticidad de los operadores de Toeplitz, en particular para símbolos con derivadas Lipschitz continuas. El cual es caso de los Hamiltonianos clásicos. También aplicaron este resultado para formas cuadráticas en la representación de Schrodinger. Según los autores, la hermiticidad en espacios de Hilbert no acotados es una prueba necesaria en el análisis funcional aplicado a teoría cuántica. Para concluir el trabajo, dejaron planteada una conjetura de equivalencia entre la completitud del hamiltonano clásico en un conjunto nulo de valores iniciales y que la cuantización "Berezin-Toeplitz" es completa para valores pequeños de cuantización. Este artículo a priori es bastante interesante, pero con pocas conclusiones relacionadas con física y más una demostración matemática.
 
-\section{ (\textit{arXiv: })}
+\section{Lee$-$Yang theory of the two$-$dimensional quantum Ising model (\textit{arXiv: 2204.08223v1})}
+\justify
+En este artículo, los autores desarrollan una teoría Lee-Yang para transiciones cuánticas de fase que incluyen fluctuaciones térmicas causadas por una temperatura finita, que provee un enlace entree el formalismo clásico de Lee-Yang y las recientes teorías de transiciones de fase a temperatura cero. La metodología utilizada se basa en la función generadora de momentos y en el comportamiento de los ceros complejos de dicha función. También determinaron el diagrama de fase del modelo cuántico de Ising en dos dimensiones, utilizando métodos de redes de tensores, tal es el caso del Grupo de Renormalización de la Matriz Densidad. Para el trabajo futuro, los autores creen importante el desarrollo de métodos para grandes cúmulos, en dos y tres dimensiones utilizando, esta vez, estados cuánticos de redes neuronales.
+
+\section{Clifford Circuits can be Properly PAC Learned if and only if \textbf{RP}$=$\textbf{NP} (\textit{arXiv: 2204.06638v2})}
 \justify
 \lipsum[1]
 
-\section{ (\textit{arXiv: })}
+\section{Divisible Codes for Quantum Computation (\textit{arXiv: 2204.13176})}
 \justify
 \lipsum[1]
 
-\section{ (\textit{arXiv: })}
-\justify
-\lipsum[1]
-
-\section{ (\textit{arXiv: })}
+\section{Analyzing Strategies for Dynamical Decoupling Insertion on IBM Quantum Computer (\textit{arXiv: 2204.1425v1})}
 \justify
 \lipsum[1]
 
