--- a/Mecánica Estadística/Tarea4/tarea4.tex
+++ b/Mecánica Estadística/Tarea4/tarea4.tex
@@ -4,8 +4,8 @@
 \usepackage{fancyhdr}%formato de pagina
 \pagestyle{fancy}%colocar la pagina con el formato deseado
 \fancyhead{}
-\fancyhead[L]{\footnotesize{Mecánica Cuántica 1}}
-\fancyhead[C]{Tarea 2}
+\fancyhead[L]{\footnotesize{Mecánica Estadística}}
+\fancyhead[C]{Tarea 4}
 \fancyhead[R]{\footnotesize{\thepage}}
 %\fancyhead[LO,RE]{Cálculo 3}
 %\fancyhead[RO,LE]{\footnotesize{\thepage}}
