Artículos y tarea simu

--- a/Mecánica Cuántica/ResumenArtículos/informe.tex
+++ b/Mecánica Cuántica/ResumenArtículos/informe.tex
@@ -48,23 +48,26 @@ En este artículo, los autores desarrollan una teoría Lee-Yang para transicione
 
 \section{Clifford Circuits can be Properly PAC Learned if and only if \textbf{RP}$=$\textbf{NP} (\textit{arXiv: 2204.06638v2})}
 \justify
-\lipsum[1]
+Los autores en este artículo plantean una pregunta inicial, "dada un conjunto de datos de estados, medidas y probabilidades, es posible predecir, \textbf{eficientemente}, la probabilidad de medición asociadas a un circuito cuántico?". En el trabajo exploran el reciente trabajo de Caro y Datta "Quantum Machine Inteligence". Todo esto con el objetivo de poder predecir el resultado de varias medidas con un considerable grado de certeza. Algo que, según los autores, podría solucionar el problema son los circuitos de Clifford, esto con resultados negativos, con lo que, los mismos autores proponen un teorema y el trabajo de dedica en su demostración, utilizando lo desarrollado por Caro y Datta, así como herramientas matemáticas interesantes, como teoría de grafos. El teorema se refiere, en concreto, a los circuitos CNOT, con la condición de que RP$=$NP.
 
 \section{Divisible Codes for Quantum Computation (\textit{arXiv: 2204.13176})}
 \justify
-\lipsum[1]
+En este artículo, los autores encuentran y demuestran que condiciones se deben cumplir para que cierto operador diagonal preserve un objeto al que llaman código CSS (no encontré a que se referían con ello). Además, de encontrar nuevas familias de estos códigos CSS utilizando formas cuadráticas, y encontraron desarrollaron una nueva aproximación que elude el teorema Easting-Knill. Como conclución, los autores exponen que el hecho de encontrar esta nueva familia motiva el diseño de códigos estabilizadores en capas, una forma de crear conjuntos de puertas que no requeriern teleportación de algo que llaman "magic states".
 
 \section{Analyzing Strategies for Dynamical Decoupling Insertion on IBM Quantum Computer (\textit{arXiv: 2204.1425v1})}
 \justify
-\lipsum[1]
+Los autores exponen un problema actual de la computación cuántica, en el cual los involucrados son los qubits incactivos. Existen tecnicas para lidiar con ellos y evitar los errores que producen pero no estan bien desarrolladas, tal es el caso del desacoplamiento dinámico (DD). Su estrategia fue dividir los qubits inactivos en dos diferetnes grupos "crosstalk-idle" y "idle-idle" y aplicar DD para ver como resulta. Los autores concluyeron que la inserción de la técnica DD depende de que induce cada uno de los tipos de idle qubits. Los autores reconocen, y los cito, que su trabajo puede ser reconocido como el primer paso en desarrollar un compilador de inserción DD para la mitigación en el error de coherencia (error que generan los qubits inactivos).
 
-\section{ (\textit{arXiv: })}
+\section{Toroidal Optical Transitions in Hydrogen-like Atoms (\textit{arXiv: 2205.01412})}
 \justify
-\lipsum[1]
+En este artículo los autores toman el hecho de que se ha demostrado que las interacciones entre la luz y la materia involucran multipolos toroidales. Los autores dividen el problema en dos, la parte relativista y la no relativista para resolverlo. En la parte no relativista, concluyen que las exitaciones dinamicas toroidales solo se verán en metamateriales, cuyas estructuras resonantes sean comparables con una longitud de onda. Para la parte relativista se concluyó que las transiciones del dipolo toroidal se pueden observar en átomos parecidos al de hidrógeno, cuando su proyeccion de spin es un "buen" número cuántico. Como posibles investigaciones a futuro, los autores mencionan varias, entre ellas, que los experimentos también deberían hacerse con Litio, dado que tienen división de estructura fina favorable.
 
 
-\section{Anexos}
-\label{sec:anexos}
+
+
+%
+%\section{Anexos}
+%\label{sec:anexos}
 
 
 
@@ -73,15 +76,15 @@ En este artículo, los autores desarrollan una teoría Lee-Yang para transicione
 
 
 % References
-\nocite{*}
-\bibliographystyle{IEEEannot}%
-\bibliography{references}%
-
-\begin{thebibliography}{00}
-\bibitem{b1} R. Symon, \textit{Mechanics} 3a. Ed. Addison$-$Wesley Publishing Company, 1971
-\bibitem{b2} R. Taylor, \textit{Classical Mechanics}, Edwards Brothers, Inc. 2005.
-\end{thebibliography}
-
+%\nocite{*}
+%\bibliographystyle{IEEEannot}%
+%\bibliography{references}%
+%
+%\begin{thebibliography}{00}
+%\bibitem{b1} R. Symon, \textit{Mechanics} 3a. Ed. Addison$-$Wesley Publishing Company, 1971
+%\bibitem{b2} R. Taylor, \textit{Classical Mechanics}, Edwards Brothers, Inc. 2005.
+%\end{thebibliography}
+%
 \end{document}
 
 
