--- a/Simulacion/Tarea2/content.tex
+++ b/Simulacion/Tarea2/content.tex
@@ -12,3 +12,64 @@ Partiendo de la idea de la programación modular y funcional, se introduce el pa
 	\item[Polimorfismo: ] Son comportamientos diferentes de objetos distintos, con entradas distintas que poseen el mismo nombre. Esto es una característica de muchos lenguajes de programación, el único punto bajo es que esta característica aumenta el tiempo de ejecución del programa.
 	\item[Modularidad: ] Con lo explicado en los primeros párrafos referido a los diferentes paradigmas de programación, los módulos son subdiviciones de una aplicación, las cuales deben ser lo más independientemente posible de la aplicación en sí, así como de sus partes. La idea es facilitar la depuración y tener un programa más ordenado.
 \end{description}
+
+\newpage
+
+Al estudiar y trabajar con este paradigma de programación, es importante tener dominio de sus respectivos conceptos, es decir, entender el paradigma en sí. Para ello se introducen dichos conceptos
+
+\begin{description}
+	\item[Clase: ] Es una plantilla en donde se definen los atributos y métodos de cierto objeto.
+	\item[Objeto: ] Es la instancia de una clase provista de atributos y métodos. Estos corresponden a objetos reales.
+	\item[Método: ] Es un algoritmo asociado a un objeto, el cual se ejecuta luego de la recepción de un mensaje. Estos también pueden conectarse con algún otro objeto del sistema.
+	\item[Atributos: ] Característica, datos y variables de la clase.
+\end{description}
+
+\subsection{Lenguaje Unificado de Modelado}
+
+En programación orientada a objetos se tiene una especie de "análogo" al diagrama de flujo, el cual se denomina como Lenguaje Unificado de Modelado (UML). Este se estableció como un modelo estandarizado para describir un enfoque de POO. Los diagramas de clases, son una tabla con $3$ filas en las cuales se colocan el nombre de la clase, sus atributos y los métodos (en los cuales, preferiblemente, se colocan sus respectivas entradas y tipo de salidas). 
+
+\subsection{Ventajas y Desventajas de la POO}
+
+Como en cualquier cosa, se tienen sus respectivas ventajas y desventajas, acontinuación se mencionan algunas de ellas.
+\subsubsection{Ventajas}
+\begin{enumerate}
+	\item Reusabilidad.
+	\item Mantenibilidadad.
+	\item Modificabiliad.
+	\item Fiabilidad.
+\end{enumerate}
+
+
+Las cuales, parecen ser basntante claras en su concepción.
+
+\subsubsection{Desventajas}
+\begin{enumerate}
+	\item Es un cambio bastante drástico entre la idea común de programación y creación de algoritmos (secuencial, funcional, etc.), por lo que suele ser complicado adaptarse a esta nueva forma de abstracción.
+	\item La velocidad de ejecución es más lenta.
+\end{enumerate}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+%%
